cabal-version:      2.4
name:               cajon-lang
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Hadrian Hughes
maintainer:         hadrianhughes@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

executable cajon-lang
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    other-modules:
          Paths_cajon_lang
    hs-source-dirs:   app
    ghc-options: -Wall -fno-warn-name-shadowing -Wcompat -Wincomplete-uni-patterns
    build-depends:
        base ^>=4.14.3.0
        , cajon-lang
        , text
        , optparse-applicative
    default-language: Haskell2010

library
    exposed-modules:
        Ast
        Lexer
        Parser
        Error
        Semant
    other-modules:
        Paths_cajon_lang
    hs-source-dirs:
        src
    build-depends:
        base ^>=4.14.3.0
        , megaparsec
        , text
        , parser-combinators
        , mtl
    default-language: Haskell2010
